datasource db { provider = "postgresql" url = env("DATABASE_URL") }
generator client { provider = "prisma-client-js" }

enum PackageType { FREE INDIVIDUAL PACK ROLE_PACK PROFESSIONAL_SYSTEM }
enum AccessLevel { FREE PREVIEW PREMIUM }
enum PublishStatus { DRAFT IN_REVIEW PUBLISHED ARCHIVED }
enum OrderStatus { PENDING PAID CANCELED REFUNDED FAILED }
enum PaymentStatus { PENDING PROCESSING SUCCEEDED FAILED REFUNDED }

model Department {
  id String @id @default(cuid())
  code String @unique
  name String
  slug String @unique
  roles Role[]
  actionsJson Json?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
model Role {
  id String @id @default(cuid())
  code String @unique
  name String
  slug String @unique
  departmentId String
  department Department @relation(fields: [departmentId], references: [id])
  aliases String[]
  externalRefs Json?
  packages RolePackage[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  @@index([departmentId])
}
model RolePackage {
  id String @id @default(cuid())
  code String @unique
  name String
  slug String @unique
  roleId String
  role Role @relation(fields: [roleId], references: [id])
  packageType PackageType @default(ROLE_PACK)
  priceCents Int @default(0)
  currency String @default("IRR")
  description String
  outcome String
  status PublishStatus @default(DRAFT)
  prompts Prompt[]
  orderItems OrderItem[]
  entitlements Entitlement[]
  reviews Review[]
  seo SeoMetadata?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  @@index([roleId, status])
}
model Prompt {
  id String @id @default(cuid())
  code String @unique
  packageId String
  package RolePackage @relation(fields: [packageId], references: [id])
  title String
  task String
  sortOrder Int
  accessLevel AccessLevel @default(PREMIUM)
  status PublishStatus @default(DRAFT)
  versions PromptVersion[]
  usageEvents UsageEvent[]
  reviews Review[]
  libraryItems LibraryItem[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  @@unique([packageId, sortOrder])
  @@index([packageId, accessLevel, status])
}
model PromptVersion {
  id String @id @default(cuid())
  promptId String
  prompt Prompt @relation(fields: [promptId], references: [id])
  version String
  masterPrompt String @db.Text
  inputSchema Json
  outputSchema Json
  exampleInput Json?
  exampleOutput Json?
  recommendedModels String[]
  limitations String[]
  qualityScore Float?
  successRate Float?
  status PublishStatus @default(DRAFT)
  changeNote String?
  qualityRuns QualityRun[]
  createdAt DateTime @default(now())
  @@unique([promptId, version])
}
model QualityRun {
  id String @id @default(cuid())
  promptVersionId String
  promptVersion PromptVersion @relation(fields: [promptVersionId], references: [id])
  evaluator String
  score Float
  success Boolean
  notes String?
  inputSnapshot Json?
  outputSnapshot Json?
  createdAt DateTime @default(now())
  @@index([promptVersionId, createdAt])
}
model User {
  id String @id @default(cuid())
  email String @unique
  name String?
  role String @default("USER")
  orders Order[]
  entitlements Entitlement[]
  libraryItems LibraryItem[]
  reviews Review[]
  usageEvents UsageEvent[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
model Order {
  id String @id @default(cuid())
  userId String
  user User @relation(fields: [userId], references: [id])
  status OrderStatus @default(PENDING)
  amountCents Int
  currency String @default("IRR")
  provider String?
  providerOrderId String?
  items OrderItem[]
  payments Payment[]
  createdAt DateTime @default(now())
  paidAt DateTime?
  @@index([userId, status])
}
model OrderItem {
  id String @id @default(cuid())
  orderId String
  order Order @relation(fields: [orderId], references: [id])
  packageId String
  package RolePackage @relation(fields: [packageId], references: [id])
  unitPriceCents Int
  quantity Int @default(1)
  @@index([packageId])
}
model Payment {
  id String @id @default(cuid())
  orderId String
  order Order @relation(fields: [orderId], references: [id])
  status PaymentStatus @default(PENDING)
  provider String
  providerPaymentId String?
  amountCents Int
  currency String @default("IRR")
  rawMetadata Json?
  createdAt DateTime @default(now())
  @@index([orderId, status])
}
model Entitlement {
  id String @id @default(cuid())
  userId String
  user User @relation(fields: [userId], references: [id])
  packageId String
  package RolePackage @relation(fields: [packageId], references: [id])
  source String
  status String @default("ACTIVE")
  grantedAt DateTime @default(now())
  expiresAt DateTime?
  @@unique([userId, packageId])
  @@index([userId, status])
}
model LibraryItem {
  id String @id @default(cuid())
  userId String
  user User @relation(fields: [userId], references: [id])
  promptId String
  prompt Prompt @relation(fields: [promptId], references: [id])
  saved Boolean @default(true)
  lastUsedAt DateTime?
  createdAt DateTime @default(now())
  @@unique([userId, promptId])
}
model Review {
  id String @id @default(cuid())
  userId String
  user User @relation(fields: [userId], references: [id])
  packageId String
  package RolePackage @relation(fields: [packageId], references: [id])
  promptId String?
  prompt Prompt? @relation(fields: [promptId], references: [id])
  rating Int
  text String?
  createdAt DateTime @default(now())
  @@index([packageId, rating])
}
model UsageEvent {
  id String @id @default(cuid())
  userId String
  promptId String
  prompt Prompt @relation(fields: [promptId], references: [id])
  event String
  success Boolean?
  outcome Json?
  metadata Json?
  createdAt DateTime @default(now())
  @@index([userId, promptId, createdAt])
}
model SeoMetadata {
  id String @id @default(cuid())
  packageId String @unique
  package RolePackage @relation(fields: [packageId], references: [id])
  title String
  description String
  canonical String?
  keywords String[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
